{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 64,
  "lineage": "ecf53c7f-3b55-a259-bd45-91924aa164b3",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-095e2c348b2ef7416",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-19-167-235.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.19.167.235",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sergio",
              "kubernetes.io/cluster/sergio": "shared",
              "module": "network",
              "module_version": "1.0.0"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:937468789323:internet-gateway/igw-03d1dc6d496b858c2",
            "id": "igw-03d1dc6d496b858c2",
            "owner_id": "937468789323",
            "tags": {
              "Name": "sergio",
              "kubernetes.io/cluster/sergio": "shared",
              "module": "network",
              "module_version": "1.0.0"
            },
            "vpc_id": "vpc-008d5c70693cf24b4"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-095e2c348b2ef7416",
            "id": "nat-0c53cad9735d86935",
            "network_interface_id": "eni-015e50ff677b85937",
            "private_ip": "10.0.0.129",
            "public_ip": "52.19.167.235",
            "subnet_id": "subnet-056d9de3e2535a89a",
            "tags": {
              "Name": "sergio",
              "kubernetes.io/cluster/sergio": "shared",
              "module": "network",
              "module_version": "1.0.0"
            }
          },
          "dependencies": [
            "module.network.aws_eip.natgw",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03d1dc6d496b858c2",
            "id": "r-rtb-089af586bd2acd1d21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-089af586bd2acd1d2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07a72cfee66621475",
            "owner_id": "937468789323",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sergio",
              "kubernetes.io/cluster/sergio": "shared",
              "module": "network",
              "module_version": "1.0.0"
            },
            "vpc_id": "vpc-008d5c70693cf24b4"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-089af586bd2acd1d2",
            "owner_id": "937468789323",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sergio",
              "kubernetes.io/cluster/sergio": "shared",
              "module": "network",
              "module_version": "1.0.0"
            },
            "vpc_id": "vpc-008d5c70693cf24b4"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff14ac714796c5c7",
            "route_table_id": "rtb-07a72cfee66621475",
            "subnet_id": "subnet-0132fb5781f681b08"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6efdf66adf64aa5",
            "route_table_id": "rtb-07a72cfee66621475",
            "subnet_id": "subnet-046c766f565c0e85d"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03486623cfbd75f2d",
            "route_table_id": "rtb-07a72cfee66621475",
            "subnet_id": "subnet-04a8b448ccc2f34d0"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed6fbd40b419fe71",
            "route_table_id": "rtb-089af586bd2acd1d2",
            "subnet_id": "subnet-056d9de3e2535a89a"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05482053a429a82e8",
            "route_table_id": "rtb-089af586bd2acd1d2",
            "subnet_id": "subnet-0633470915b8b65f4"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f75ff18e06707f93",
            "route_table_id": "rtb-089af586bd2acd1d2",
            "subnet_id": "subnet-063805fa4d4dc89d2"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:937468789323:subnet/subnet-0132fb5781f681b08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0132fb5781f681b08",
            "map_public_ip_on_launch": false,
            "owner_id": "937468789323",
            "tags": {
              "Name": "sergio-private-1a",
              "kubernetes.io/cluster/sergio": "shared",
              "module": "network",
              "module_version": "1.0.0"
            },
            "vpc_id": "vpc-008d5c70693cf24b4"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:937468789323:subnet/subnet-046c766f565c0e85d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-046c766f565c0e85d",
            "map_public_ip_on_launch": false,
            "owner_id": "937468789323",
            "tags": {
              "Name": "sergio-private-1b",
              "kubernetes.io/cluster/sergio": "shared",
              "module": "network",
              "module_version": "1.0.0"
            },
            "vpc_id": "vpc-008d5c70693cf24b4"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:937468789323:subnet/subnet-04a8b448ccc2f34d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-04a8b448ccc2f34d0",
            "map_public_ip_on_launch": false,
            "owner_id": "937468789323",
            "tags": {
              "Name": "sergio-private-1c",
              "kubernetes.io/cluster/sergio": "shared",
              "module": "network",
              "module_version": "1.0.0"
            },
            "vpc_id": "vpc-008d5c70693cf24b4"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:937468789323:subnet/subnet-056d9de3e2535a89a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-056d9de3e2535a89a",
            "map_public_ip_on_launch": true,
            "owner_id": "937468789323",
            "tags": {
              "Name": "sergio-public-1a",
              "kubernetes.io/cluster/sergio": "shared",
              "module": "network",
              "module_version": "1.0.0"
            },
            "vpc_id": "vpc-008d5c70693cf24b4"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:937468789323:subnet/subnet-0633470915b8b65f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0633470915b8b65f4",
            "map_public_ip_on_launch": true,
            "owner_id": "937468789323",
            "tags": {
              "Name": "sergio-public-1b",
              "kubernetes.io/cluster/sergio": "shared",
              "module": "network",
              "module_version": "1.0.0"
            },
            "vpc_id": "vpc-008d5c70693cf24b4"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:937468789323:subnet/subnet-063805fa4d4dc89d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-063805fa4d4dc89d2",
            "map_public_ip_on_launch": true,
            "owner_id": "937468789323",
            "tags": {
              "Name": "sergio-public-1c",
              "kubernetes.io/cluster/sergio": "shared",
              "module": "network",
              "module_version": "1.0.0"
            },
            "vpc_id": "vpc-008d5c70693cf24b4"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:937468789323:vpc/vpc-008d5c70693cf24b4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-001fa952464f8adba",
            "default_route_table_id": "rtb-0c10d36a5a5238429",
            "default_security_group_id": "sg-0e4397bb9dec5d46d",
            "dhcp_options_id": "dopt-56da6d30",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-008d5c70693cf24b4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c10d36a5a5238429",
            "owner_id": "937468789323",
            "tags": {
              "Name": "sergio",
              "kubernetes.io/cluster/sergio": "shared",
              "module": "network",
              "module_version": "1.0.0"
            }
          }
        }
      ]
    }
  ]
}